--- a/src/MyFriends.BL/MyFriends.BL.csproj
+++ b/src/MyFriends.BL/MyFriends.BL.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="2.26.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyFriends.DAL\MyFriends.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
