feat: friendList friendDetail friendEdit pages
Structures and functionality of Friend List View, Friend Detail View and Friend Edit View were implemented. Application is executable now!

--- a/src/MyFriends.App/MyFriends.App.csproj
+++ b/src/MyFriends.App/MyFriends.App.csproj
@@ -68,4 +68,22 @@
 	  <ProjectReference Include="..\MyFriends.BL\MyFriends.BL.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="Views\FriendDetailView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\FriendEditView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\FriendListView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\LikesView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\RelationView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
